using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

using BlackJack_solid.Compartido;

namespace BlackJack_solid.Nucleo.Entidades
{
    public sealed record Carta(Palo Palo, Cara Cara);
}
